--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
 <html>
 
 <h1 id="speechshower"></h1>
+<button type="button" onclick="connectSerial()">Connect Serial Baud 9600</button>
+
 
 <script>
+
+ let port;
+let writer;
+
+async function connectSerial() {
+    try {
+        // Ask the user to select a port and open a connection
+        port = await navigator.serial.requestPort();
+        await port.open({ baudRate: 9600 });
+
+        const encoder = new TextEncoderStream();
+        encoder.readable.pipeTo(port.writable);
+        writer = encoder.writable.getWriter();
+
+        console.log("YAY! Serial connection established!");
+    } catch (err) {
+        console.error(":( Serial connection failed:", err);
+    }
+}
+
+async function sendSerialMessage(message) {
+    if (writer) {
+        await writer.write(message + "\n");
+        console.log("Sent to Arduino:", message);
+    } else {
+        console.warn("Connect first");
+    }
+}
+
+  
   const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
 if (SpeechRecognition) {
@@ -18,6 +50,7 @@ if (SpeechRecognition) {
     const transcript = event.results[event.results.length - 1][0].transcript;
     console.log('You said:', transcript);
     document.getElementById("speechshower").innerHTML = transcript;
+    sendSerialMessage(transcript);
   };
 
   recognition.onerror = (event) => {
