WHY IS IT NOT UPDATING!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <h1 id="speechshower"></h1>
-<button type="button" onclick="connectSerial()">Connect Serial Baud 9600</button>
+<button type="button" onclick="connectSerial()">Connect Serial Baud 9600!</button>
 
 
 <script>
