--- a/index.html
+++ b/index.html
@@ -3,7 +3,138 @@
 <body>
 <html>
 
-<h1 id="speechshower"></h1>
+<style>
+ /* ====== Global ====== */
+:root {
+  --bg: #0a0f0f;
+  --bg-alt: #0f1818;
+  --text: #c8f7dc;
+  --accent: #00ff88;
+  --accent-dim: #00cc6a;
+  --danger: #ff4d4d;
+}
+
+body {
+  background: var(--bg);
+  color: var(--text);
+  font-family: "Fira Code", "JetBrains Mono", monospace;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
+  overflow-x: hidden;
+}
+
+/* Subtle scanline effect */
+body::before {
+  content: "";
+  pointer-events: none;
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: repeating-linear-gradient(
+    to bottom,
+    rgba(0, 255, 136, 0.03),
+    rgba(0, 255, 136, 0.03) 2px,
+    transparent 2px,
+    transparent 4px
+  );
+  z-index: 999;
+}
+
+/* ====== Links ====== */
+a {
+  color: var(--accent);
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+a:hover {
+  color: var(--danger);
+  text-shadow: 0 0 6px var(--danger);
+}
+
+/* ====== Headings ====== */
+h1, h2, h3 {
+  color: var(--accent);
+  text-shadow: 0 0 12px var(--accent);
+  letter-spacing: 1px;
+}
+
+/* ====== Terminal Boxes ====== */
+.terminal {
+  background: var(--bg-alt);
+  border: 1px solid var(--accent-dim);
+  padding: 1.5rem;
+  border-radius: 6px;
+  box-shadow: 0 0 15px rgba(0,255,136,0.15);
+  position: relative;
+  overflow: hidden;
+}
+
+.terminal::before {
+  content: ">_";
+  color: var(--accent);
+  position: absolute;
+  top: 10px;
+  left: 12px;
+  font-weight: bold;
+  opacity: 0.5;
+}
+
+/* ====== Buttons ====== */
+.btn {
+  border: 1px solid var(--accent);
+  background: transparent;
+  padding: 0.6rem 1.2rem;
+  color: var(--accent);
+  font-size: 1rem;
+  cursor: pointer;
+  transition: 0.25s;
+  font-family: inherit;
+}
+
+.btn:hover {
+  background: var(--accent);
+  color: #000;
+  box-shadow: 0 0 12px var(--accent);
+}
+
+/* ====== Glitch Animation ====== */
+.glitch {
+  position: relative;
+  display: inline-block;
+}
+
+.glitch::before,
+.glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0.7;
+}
+
+.glitch::before {
+  color: #ff005d;
+  animation: glitch 0.35s infinite;
+}
+
+.glitch::after {
+  color: #00fff2;
+  animation: glitch 0.35s infinite reverse;
+}
+
+@keyframes glitch {
+  0% { transform: translate(0, 0); }
+  20% { transform: translate(-2px, 2px); }
+  40% { transform: translate(-2px, -2px); }
+  60% { transform: translate(2px, 2px); }
+  80% { transform: translate(2px, -2px); }
+  100% { transform: translate(0, 0); }
+}
+
+</style>
+<h1>PROJECT BACON BANANA</h1> 
+<h1 id="speechshower" class="glitch"></h1>
 <button type="button" onclick="connectSerial()">Connect Serial Baud 9600!</button>
 
 
