a few more styling touches!!!!

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ h1, h2, h3 {
 </style>
 <h1 class="glitch">PROJECT BACON BANANA</h1> 
 <h1 id="speechshower" class="terminal"></h1>
-<button class="button neon pulse"type="button" onclick="connectSerial()">Connect Serial Baud 9600!</button>
+<button class="btn button neon pulse"type="button" onclick="connectSerial()">Connect Serial Baud 9600!</button>
 
 
 <script>
