--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
   background: var(--bg);
   color: var(--text);
   font-family: "Fira Code", "JetBrains Mono", monospace;
-  margin: 0;
+  margin: 20px;
   padding: 0;
   line-height: 1.6;
   overflow-x: hidden;
